apps/money-order/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: money-order
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: money-order
  template:
    metadata:
      labels:
        app: money-order
    spec:
      imagePullSecrets:
        - name: zot-pull-secret
      containers:
        - name: money-order
          image: registry.aashutoshparajuli.com.np/money-order/backend:0.1.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "300m"
        - name: money-order-worker
          image: registry.aashutoshparajuli.com.np/money-order/backend:0.1.2
          imagePullPolicy: Always
          command: ["node", "dist/modules/temporal/worker/worker.js"]
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
