apps/money-order/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: money-order-backend
  namespace: money-order
spec:
  selector:
    app: money-order
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
